# ScientificComputing4Physics

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
docs/: index.md
docs/task1/: custom_docker.md  install_docker.md  test_py_cpp.md
docs/task2/: intro.md  matrix_mult.md  questions.md  vector_sum.md
docs/task3/: build.md  code_overview.md  docker.md  intro.md  vector_io.md  vector_sum.md
docs/task4/: build.md  code_overview.md  docker.md  integration.md  intro.md  python.md  results.md  romberg.md  sampling.md
docs/task5/: daxpy_overview.md  docker.md  for_gsl_summator.md  intro.md  kahan_summator.md  neumaier_summator.md  pairwise_summator.md  summation_overview.md
docs/task6/: bonus.md  c2c.md  code_overview.md  docker.md  intro.md  r2c.md
docs/task7/: build.md  docker.md  intro.md
docs/task8/: build.md  code_overview.md  docker.md  intro.md
docs/task9/: build.md  code_overview.md  docker.md  intro.md
javascripts/: mathjax.js
search/: search_index.json
stylesheets/: mystyle.css
task1/custom_docker/: index.html
task1/install_docker/: index.html
task1/test/: scalar_prod_cpp  scalar_prod_cpp.cpp  scalar_prod_python.py
task1/test/output/: out_python.txt
task1/test_py_cpp/: index.html
task2/dockerfile/: Dockerfile.alma9
task2/intro/: index.html
task2/matrix_mult/: index.html
task2/questions/: index.html
task2/test/: matrix_mult_cpp.hpp  matrix_mult_python.py  test_matrix_mult_cpp.cpp  test_matrix_mult_python.py  test_vector_sum_cpp.cpp  test_vector_sum_python.py  vector_sum_cpp.hpp  vector_sum_python.py
task2/test/matrix_mult/: matrix_mult_cpp.hpp  plot_results.py  test_matrix_mult_cpp.cpp  test_matrix_mult_python.py
task2/test/vector_sum/: plot_results.py
task2/vector_sum/: index.html
task3/: CMakeLists.txt  README.md
task3/code_overview/: index.html
task3/commands/: run.in
task3/config/: config.yml
task3/docker/: Dockerfile.alma9  index.html
task3/dockerfile/: Dockerfile.alma9
task3/include/: HelperFunctions.hpp  VectorIO.hpp  VectorSumDefault.hpp  VectorSumGSL.hpp  VectorSumInterface.hpp  vector_sum.hpp
task3/intro/: index.html
task3/scripts/: buildProject.sh  destroyProject.sh
task3/src/: generateVectors.cpp  vectorSum.cpp  vector_sum.cpp
task3/test/: CMakeLists.txt  README.md
task3/test/src/: generate_vectors.cpp
task3/vector_io/: index.html
task3/vector_sum/: index.html
task4/: CMakeLists.txt  README.md
task4/code_overview/: index.html
task4/config/: config.yml
task4/docker/: index.html
task4/include/: Function.hpp  HelperFunctions.hpp  Integrator.hpp
task4/integration/: index.html
task4/intro/: index.html
task4/python/: compute_integral.py  index.html
task4/results/: index.html
task4/romberg/: index.html
task4/sampling/: index.html
task4/scripts/: runExperiments.sh
task4/src/: computeIntegral.cpp
task5/: CMakeLists.txt  README.md
task5/daxpy_overview/: index.html
task5/docker/: Dockerfile.alma9  index.html
task5/for_gsl_summator/: index.html
task5/include/: ForLoopSummator.hpp  GSLSummator.hpp  KahanSummator.hpp  NeumaierSummator.hpp  PairwiseSummator.hpp  Summator.hpp  TestSuite.hpp  VectorGenerator.hpp  VectorSumInterface.hpp
task5/intro/: index.html
task5/kahan_summator/: index.html
task5/neumaier_summator/: index.html
task5/pairwise_summator/: index.html
task5/src/: computeSum.cpp  testDaxpy.cpp
task5/summation_overview/: index.html
task6/: CMakeLists.txt  README.md
task6/bonus/: index.html
task6/c2c/: index.html
task6/code_overview/: index.html
task6/docker/: index.html
task6/include/: FFT.hpp  FFTTestHelpers.hpp  Task06Helpers.hpp
task6/intro/: index.html
task6/r2c/: index.html
task6/scripts/: run_all_tests.sh
task6/src/: FFT.cpp  task06.cpp  task06_bonus.cpp
task6/test/: test_fft1d.cpp  test_fft2d_c2c.cpp  test_fft2d_c2c_trim.cpp  test_fft2d_r2c_reconstruct_full.cpp  test_fft2d_r2c_trim.cpp  test_fft_next_power_of_two.cpp
task7/: CMakeLists.txt  README.md
task7/docker/: index.html
task7/intro/: index.html
task7/scripts/: destroyProject.sh
task7/test/: test_vector_sum.cpp
task8/: CMakeLists.txt  README.md
task8/code_overview/: index.html
task8/commands/: run  run.in
task8/docker/: Dockerfile.alma9  index.html
task8/intro/: index.html
task8/test/: test_vector_sum.cpp
task9/: CMakeLists.txt  README.md
task9/code_overview/: index.html
task9/docker/: Dockerfile.alma9  index.html
task9/include/: vector_sum.hpp  vector_sum_chunked.hpp  vector_sum_mpi.hpp  vector_sum_omp.hpp
task9/intro/: index.html
task9/test/: test_vector_sum_mpi.cpp  test_vector_sum_omp.cpp
